--- a/dashboard.html
+++ b/dashboard.html
@@ -117,7 +117,7 @@
     </div>
 
     <script>
-        const CONFIG = typeof HOTEL_CONFIG !== 'undefined' ? HOTEL_CONFIG : { system: { backend: { scriptUrl: "" } } };
+        const CONFIG = typeof HOTEL_CONFIG !== 'undefined' ? HOTEL_CONFIG : { system: { backend: { scriptUrl: "https://script.google.com/macros/s/AKfycbwQb7bOHwfMQc-L_gqnw_7nLSK2F9iT8cQafTM5fZ-rT6f3tBeJ9ZDjy0AalZ3-I7_m6Q/exec" } } };
         const API_URL = CONFIG.system.backend.scriptUrl;
 
         let currentTab = 'RESTAURANT RESERVATIONS';
