--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
     <script>
         const CONFIG = typeof HOTEL_CONFIG !== 'undefined' ? HOTEL_CONFIG : {
-            branding: { name: "Orion", logo: "" },
+            branding: { name: "Orion", logo: "https://github.com/Oriondevcore/Zar-Demo-v100/blob/main/hotel.jpeg" },
             system: { backend: { scriptUrl: "https://script.google.com/macros/s/AKfycbwQb7bOHwfMQc-L_gqnw_7nLSK2F9iT8cQafTM5fZ-rT6f3tBeJ9ZDjy0AalZ3-I7_m6Q/exec" } },
             features: { demoMode: false }
         };
